fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,39 +1,39 @@
 :root {
-    /* dark shades of primary color*/
-    --clr-primary-1: hsl(205, 86%, 17%);
-    --clr-primary-2: hsl(205, 77%, 27%);
-    --clr-primary-3: hsl(205, 72%, 37%);
-    --clr-primary-4: hsl(205, 63%, 48%);
-    /* primary/main color */
-    --clr-primary-5: hsl(205, 78%, 60%);
-    /* lighter shades of primary color */
-    --clr-primary-6: hsl(205, 89%, 70%);
-    --clr-primary-7: hsl(205, 90%, 76%);
-    --clr-primary-8: hsl(205, 86%, 81%);
-    --clr-primary-9: hsl(205, 90%, 88%);
-    --clr-primary-10: hsl(205, 100%, 96%);
-    /* darkest grey - used for headings */
-    --clr-grey-1: hsl(209, 61%, 16%);
-    --clr-grey-2: hsl(211, 39%, 23%);
-    --clr-grey-3: hsl(209, 34%, 30%);
-    --clr-grey-4: hsl(209, 28%, 39%);
-    /* grey used for paragraphs */
-    --clr-grey-5: hsl(210, 22%, 49%);
-    --clr-grey-6: hsl(209, 23%, 60%);
-    --clr-grey-7: hsl(211, 27%, 70%);
-    --clr-grey-8: hsl(210, 31%, 80%);
-    --clr-grey-9: hsl(212, 33%, 89%);
-    --clr-grey-10: hsl(210, 36%, 96%);
-    --clr-white: #fff;
-    --clr-purple: #4b145b;
-    --clr-grey : #555;
-    --clr-red-special: #b4345c;
-    --clr-grey-special: #eae6eb;
-    --clr-red-dark: hsl(360, 67%, 44%);
-    --clr-red-light: hsl(360, 71%, 66%);
-    --clr-green-dark: hsl(125, 67%, 44%);
-    --clr-green-light: hsl(125, 71%, 66%);
-    --clr-black: #222;
+  /* dark shades of primary color*/
+  --clr-primary-1: hsl(205, 86%, 17%);
+  --clr-primary-2: hsl(205, 77%, 27%);
+  --clr-primary-3: hsl(205, 72%, 37%);
+  --clr-primary-4: hsl(205, 63%, 48%);
+  /* primary/main color */
+  --clr-primary-5: hsl(205, 78%, 60%);
+  /* lighter shades of primary color */
+  --clr-primary-6: hsl(205, 89%, 70%);
+  --clr-primary-7: hsl(205, 90%, 76%);
+  --clr-primary-8: hsl(205, 86%, 81%);
+  --clr-primary-9: hsl(205, 90%, 88%);
+  --clr-primary-10: hsl(205, 100%, 96%);
+  /* darkest grey - used for headings */
+  --clr-grey-1: hsl(209, 61%, 16%);
+  --clr-grey-2: hsl(211, 39%, 23%);
+  --clr-grey-3: hsl(209, 34%, 30%);
+  --clr-grey-4: hsl(209, 28%, 39%);
+  /* grey used for paragraphs */
+  --clr-grey-5: hsl(210, 22%, 49%);
+  --clr-grey-6: hsl(209, 23%, 60%);
+  --clr-grey-7: hsl(211, 27%, 70%);
+  --clr-grey-8: hsl(210, 31%, 80%);
+  --clr-grey-9: hsl(212, 33%, 89%);
+  --clr-grey-10: hsl(210, 36%, 96%);
+  --clr-white: #fff;
+  --clr-purple: #4b145b;
+  --clr-grey: #555;
+  --clr-red-special: #b4345c;
+  --clr-grey-special: #eae6eb;
+  --clr-red-dark: hsl(360, 67%, 44%);
+  --clr-red-light: hsl(360, 71%, 66%);
+  --clr-green-dark: hsl(125, 67%, 44%);
+  --clr-green-light: hsl(125, 71%, 66%);
+  --clr-black: #222;
   --orange: rgba(245, 88, 10, 0.3);
 
   --border-radius: 1.3rem;
@@ -52,6 +52,7 @@ html {
   font-family: 'Montserrat', sans-serif;
 
   font-size: 400;
+  overflow-x: hidden;
 
   scroll-behavior: smooth;
 }
@@ -65,15 +66,18 @@ html {
 }
 
 h1 {
-  font-size: 6rem; /* 60px */
+  font-size: 6rem;
+  /* 60px */
 }
 
 h2 {
-  font-size: 4rem; /* 40px */
+  font-size: 4rem;
+  /* 40px */
 }
 
 h3 {
-  font-size: 3rem; /* 30px */
+  font-size: 3rem;
+  /* 30px */
 
 }
 
@@ -81,8 +85,10 @@ p,
 li,
 span,
 label,
-a,button {
-  font-size: 2.1rem; /* 21px */
+a,
+button {
+  font-size: 2.1rem;
+  /* 21px */
 }
 
 a,
@@ -126,23 +132,28 @@ body {
 
 @media screen and (max-width: 768px) {
   h1 {
-    font-size: 5rem; /* 50px */
+    font-size: 5rem;
+    /* 50px */
   }
-  
+
   h2 {
-    font-size: 3.6rem;/* 36px */
+    font-size: 3.6rem;
+    /* 36px */
   }
-  
+
   h3 {
-    font-size: 2.5rem;/* 25px */
-  
+    font-size: 2.5rem;
+    /* 25px */
+
   }
-  
+
   p,
   li,
   span,
   label,
-  a,button {
-    font-size: 1.8rem;/* 18px */
+  a,
+  button {
+    font-size: 1.8rem;
+    /* 18px */
   }
 }
